Reviewed by Kevin Ollivier.

Only account for overhang for multi-character strings.

https://bugs.webkit.org/show_bug.cgi?id=25961


Canonical link: https://commits.webkit.org/35934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44057 268f45cc-cd09-0410-ab3c-d52691b4dbfc